2014-07-01  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cairo.trm, term/wxt.trm:
	Always report {no}enhanced property in "show term".

2014-06-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c src/show.c src/tables.c docs/gnuplot.doc:
	New command:  set margins <left>, <right>, <top>, <bottom>
	acts just like four successive commands set lmargin <left>, ...

	* src/unset.c:  unset margins

2014-06-20  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/wxterminal/wxt_gui.h:  The configuration test for
	wxWidgets >= 2.8 had no effect on code generation. Remove this test.

	* configure.in src/wxterminal/wxt_gui.h:  Revert the attemp to guess
	whether -lX11 is required by wxt. As feared, this causes problems on OSX
	and other platforms where wx is built on top of something other than X11.

2014-06-16  Karl Ratzsch  <ratzsch@uni-freiburg.de>

	* fit.c:  FIT_NITER holds number of iterations used by previous fit.

2014-06-16  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/wxterminal/wxt_gui.h:  wxWidgets versions > 2.8 want
	the main program to call XInitThreads(), but fail to specify -lX11 in 
	wxt-config.   So we force this ourselves.   [=> reverted 2014-06-20]
	Bug #1401

	* src/graphics.c (xtick2d_callback): Clip r axis tics and tic labels to
	the bounding box of the plot.
	Bug #1290

2014-06-15  Dmitri A. Sergatskov  <dasergatskov@gmail.com>

	* configure.in: Add LRELEASE for Qt5 autoconfiguration

2014-06-15  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/plot.c (main):  Fix persist mode on Windows when reading
	from a pipe.
	See Bug #1322

2014-06-15  Akira Kakuto <kakuto@fuk.kindai.ac.jp>

	* src/binary.c src/datafile.h src/syscfg.h:  LFS support on Windows
	for MSVC and MinGW.
	See also Patch #675

2014-06-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.h src/axis.c src/boundary.c src/plot2d.c (eval_plots):
	Unlike all other axes, log scaling was being applied to the color axis